// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Editor render presents error message if no relevant editor found and ref ready 1`] = `
<div
  className="d-flex flex-column"
>
  <div
    aria-label="fAkEBlock"
    className="pgn__modal-fullscreen h-100"
    role="dialog"
  >
    <FormattedMessage
      defaultMessage="Error: Could Not find Editor"
      description="Error Message Dispayed When An unsopported Editor is desired in V2"
      id="authoring.editorpage.selecteditor.error"
    />
  </div>
</div>
`;

exports[`Editor render snapshot: renders correct editor given blockType (html -> TextEditor) 1`] = `
<div
  className="d-flex flex-column"
>
  <div
    aria-label="html"
    className="pgn__modal-fullscreen h-100"
    role="dialog"
  >
    <TextEditor
      onClose={[MockFunction props.onClose]}
      returnFunction={null}
    />
  </div>
</div>
`;
